--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,8 @@ dependencies:
   # Design & UI
   google_fonts: ^6.2.1
   flutter_animate: ^4.5.0
-  flutter_svg: ^2.0.10
-  phosphor_flutter: ^2.0.0 # Updated for latest icon names
+  phosphor_flutter: ^2.0.0
   gap: ^3.0.0
-  cached_network_image: ^3.3.1
-  image_picker: ^1.1.2
 
   # State Management
   flutter_riverpod: ^2.5.1
@@ -28,15 +25,10 @@ dependencies:
   firebase_core: ^3.1.0
   firebase_auth: ^5.1.0
   cloud_firestore: ^5.0.0
-  firebase_storage: ^12.0.0
   firebase_messaging: ^15.0.0
-  cloud_functions: ^5.0.0
   google_sign_in: ^6.2.1
 
   # Security & Network
-  encrypt: ^5.0.3
-  connectivity_plus: ^6.0.3
-  crypto: ^3.0.3
   local_auth: ^2.2.0
 
   # Data & Storage
@@ -44,12 +36,6 @@ dependencies:
   path_provider: ^2.1.2
   permission_handler: ^11.2.0
   flutter_contacts: ^1.1.7+1
-
-  # Document Generation & Export
-  pdf: ^3.10.7
-  csv: ^6.0.0
-  printing: ^5.12.0
-  open_filex: ^4.3.4
 
   # Logic & Utils
   intl: ^0.19.0
@@ -62,10 +48,21 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.14.4
 
 flutter:
   uses-material-design: true
-
   assets:
-    - assets/images/
     - assets/icons/
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/app_icon.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
+  web:
+    generate: true
+    image_path: "assets/icons/app_icon.png"
+    background_color: "#1B3B6F"
+    theme_color: "#1B3B6F"
